--- a/products/br/vector.yaml.tmpl
+++ b/products/br/vector.yaml.tmpl
@@ -29,6 +29,7 @@ transforms:
       . = { "data": .data }
 
 #adding to redeploy
+#adding to redeploy
 sinks:
   gcp_pubsub_sink:
     type: gcp_pubsub
