--- a/products/br/vector.yaml.tmpl
+++ b/products/br/vector.yaml.tmpl
@@ -32,9 +32,8 @@ transforms:
 sinks:
   gcp_pubsub_sink:
     type: gcp_pubsub
-    enabled: ${GCP_SINK_ENABLED:-true}
     inputs: [enriched_http]
-    project: "${gcp_project}"
-    topic: "${pubsub_topic_name}"
+    project= "${gcp_project}"
+    topic= "${pubsub_topic_name}"
     encoding:
       codec: json
