--- a/products/radio/vector.yaml.tmpl
+++ b/products/radio/vector.yaml.tmpl
@@ -29,7 +29,7 @@ transforms:
       .data = encode_base64(encode_gzip(encode_json(.)))
       . = { "data": .data }
 
-#comment
+#comment-test
 sinks:
   gcp_pubsub_sink:
     type: gcp_pubsub
